--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 bevy = "0.12.0"
 rand = "0.8.5"
+anyhow = "1.0" # for error handling: https://docs.rs/anyhow/latest/anyhow
+inline_tweak = "1.0" # for tweaking constants at runtime in debug mode: https://docs.rs/inline_tweak/latest/inline_tweak
