--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ bevy = "0.12.0"
 rand = "0.8.5"
 anyhow = "1.0" # for error handling: https://docs.rs/anyhow/latest/anyhow
 inline_tweak = "1.0" # for tweaking constants at runtime in debug mode: https://docs.rs/inline_tweak/latest/inline_tweak
+time = "0.3" # for timing: https://docs.rs/time/latest/time
+itertools = "0.12" # for iterators: https://docs.rs/itertools/latest/itertools
