--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ anyhow = "1.0" # for error handling: https://docs.rs/anyhow/latest/anyhow
 inline_tweak = "1.0" # for tweaking constants at runtime in debug mode: https://docs.rs/inline_tweak/latest/inline_tweak
 time = "0.3" # for timing: https://docs.rs/time/latest/time
 itertools = "0.12" # for iterators: https://docs.rs/itertools/latest/itertools
+bevy_egui = "0.23" # for gui: https://docs.rs/bevy_egui/latest/bevy_egui
