--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ time = "0.3" # for timing: https://docs.rs/time/latest/time
 itertools = "0.12" # for iterators: https://docs.rs/itertools/latest/itertools
 bevy_egui = "0.23" # for gui: https://docs.rs/bevy_egui/latest/bevy_egui
 bevy_tweening = "0.9" # for tweening: https://docs.rs/bevy_tweening/latest/bevy_tweening
+bevy_embedded_assets = "0.9"
