--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,12 @@
 				}
 			},
 			"args": [],
-			"cwd": "${workspaceFolder}"
+			"cwd": "${workspaceFolder}",
+			"env": {
+				"CARGO_MANIFEST_DIR": "${workspaceFolder}",
+				"DYLD_LIBRARY_PATH": "${workspaceFolder}/target/debug;${workspaceFolder}/target/debug/deps:${env:DYLD_LIBRARY_PATH}",
+				"PATH": "${env:USERPROFILE}/.rustup/toolchains/stable-x86_64-pc-windows-msvc/bin;${workspaceFolder}/target/debug/deps;${env:PATH}",
+			}
 		},
 		{
 			"type": "lldb",
