--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.12.0", features = ["dynamic_linking"] } # TODO: revert on release build
+# bevy = { version = "0.12.0" }
 rand = "0.8.5"
 anyhow = "1.0" # for error handling: https://docs.rs/anyhow/latest/anyhow
 inline_tweak = "1.0" # for tweaking constants at runtime in debug mode: https://docs.rs/inline_tweak/latest/inline_tweak
